game score and visitor tables are wrapped in containers, vis stats is not wrapped-->the fixed column z-index is either negative(does not show) or positive(shows) and stays on screen

--- a/src/GameInfo/style.css
+++ b/src/GameInfo/style.css
@@ -71,30 +71,50 @@ body {
 	/*position: absolute;*/
 }
 
-.game-score-container-OLD{
-	/*border: 2px solid black;*/
-	/*background-color: red;*/
-	/*position: -webkit-sticky;*/
-	/*position: sticky;*/
-	/*top: 0px;*/
+/*making this width super wide helps the inner table stick horizontally*/
+#game-score-container {
+	border: 2px solid black;
+	background-color: red;
+	width: 200vw; /*visitor or home stats table width, whatever is larger*/
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0px;
 	/*position: fixed; This does not show up on mobile unless top or bottom: 0px; is added*/
-	/*left: 0px; This does not show up on mobile unless top or bottom: 0px; is added*/
+	left: 0px; /*This does not show up on mobile unless top or bottom: 0px; is added*/
 	/*right: 0px; This does not show up on mobile unless top or bottom: 0px; is added*/
 }
 
-
-.visitor-name-container-OLD{
-	/*border: 2px solid green;*/
-	/*background-color: gold;*/
-	/*position: -webkit-sticky;*/
-	/*position: sticky;*/
-	/*top: 0px;*/
+/*this width fills the viewport so the inner table sticks horizontally*/
+#game-score-inside-container {
+  border: 2px solid pink;
+  background-color: purple;
+  width: 100vw; /*Relative to 1% of the width of the viewport*/
+  /*margin: 0 auto; this centers the element*/
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0px;
 }
 
-.visitor-name-OLD {
-	border: 2px solid blue;
-	background-color: grey;
-	margin: 0 auto; /*this centers the element*/
+#visitor-name-container {
+	border: 2px solid aqua;
+	background-color: black;
+	width: 200vw; /*visitor or home stats table width, whatever is larger*/
+	position: -webkit-sticky;
+	position: sticky;
+	top: 105px; /* game score table height*/
+	/*position: fixed; This does not show up on mobile unless top or bottom: 0px; is added*/
+	left: 0px; /*This does not show up on mobile unless top or bottom: 0px; is added*/
+	/*right: 0px; This does not show up on mobile unless top or bottom: 0px; is added*/
+}
+
+#visitor-name-inside-container {
+  border: 2px solid blue;
+  background-color: fuchsia;
+  width: 100vw; /*Relative to 1% of the width of the viewport*/
+  /*margin: 0 auto; this centers the element*/
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0px;
 }
 
 /*Experimental*/
@@ -127,7 +147,7 @@ body {
 	position: sticky;
 	top: 152px; /*100 + 47 = 147, height of the two containers above this one*/
 	background-color: cyan;
-	/*z-index: 100;*/
+	z-index: 0;
 }
 
 /*Fix the first column  to the left...tbody*/
@@ -143,10 +163,13 @@ body {
 .freeze-head-and-col-fixed td:first-of-type{
 	position: -webkit-sticky;
 	position: sticky;
-	/*background-color: white;*/
 	left: 0px;
 	font-weight: bold;
+	z-index: 0;
 }
+
+
+
 
 /* Edit: corner fixed always...thead...1st row */
 .freeze-head-and-col thead tr:first-of-type th:first-of-type{
